--- a/styles/main.css
+++ b/styles/main.css
@@ -1,15 +1,20 @@
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
 body {
   margin: 0;
   background-color: rgb(239, 239, 239);
+  font-family: GTUltra, Lato, Noto Sans, Noto Sans JP, Noto Sans KR,
+    Noto Sans SC, Noto Sans TC, ui-sans-serif, system-ui, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
+  font-size: 13px;
 }
-
 
 .container {
   display: flex;
@@ -18,4 +23,9 @@ body {
   align-items: center;
   justify-content: center;
   padding-top: 2.75rem;
+}
+
+.container__title {
+  text-align: center;
+  padding: 4px;
 }
