--- a/styles/product-card.css
+++ b/styles/product-card.css
@@ -24,10 +24,10 @@
 }
 
 .product-card__image {
-  grid-row-start: 1;
   grid-column-start: 1;
   position: relative;
   grid-row: span 1 / span 1;
+  padding-bottom: 1.4rem;
 }
 .product-card__image-outer {
   aspect-ratio: 1 / 1;
@@ -51,22 +51,23 @@
   border-style: none;
 }
 .product-card__label {
-  grid-row-start: 1;
-  grid-column-start: 1;
-  position: relative;
-  padding: 0.75rem;
-  align-self: flex-end;
-  justify-self: start;
-  grid-row: span 1 / span 1;
+  position: absolute;
+  bottom: 0.75rem;
+  left: 4px;
+}
+.product-card__new-label {
+  color: rgb(255, 255, 255);
+  background-color: rgb(136, 178, 171);
+  font-weight: 700;
+  border-radius: .375rem;
+  padding: 0.25rem 0.5rem;
 }
 .product-card__main-info {
-  grid-row-start: 2;
   grid-column-start: 1;
   padding: 0 0.75rem;
   grid-row: span 1 / span 1;
 }
 .product-card__color-picker {
-  grid-row-start: 3;
   grid-column-start: 1;
   position: relative;
   grid-row: span 1 / span 1;
@@ -75,7 +76,6 @@
   padding: 0 0.75rem;
 }
 .product-card__description {
-  grid-row-start: 4;
   grid-column-start: 1;
   padding: 0 0.75rem;
   grid-row: span 1 / span 1;
@@ -88,7 +88,7 @@
   display: -webkit-box;
   line-clamp: 2;
   -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;  
+  -webkit-box-orient: vertical;
   overflow: hidden;
   margin: 0;
 }
@@ -109,5 +109,3 @@
   outline-width: 2px;
   outline-style: solid;
 }
-
-
