--- a/styles/product-card.css
+++ b/styles/product-card.css
@@ -1,10 +1,15 @@
 .product-card-container {
   display: flex;
-  flex-wrap: wrap;
   gap: 0.25rem;
   padding: 0 2rem;
   justify-content: center;
   align-items: center;
+}
+@media (max-width: 768px) {
+  .product-card-container {
+    flex-direction: column;
+    gap: 0.5rem;
+  }
 }
 
 .product-card {
@@ -49,6 +54,24 @@
   height: 100%;
   margin: 0 auto;
   border-style: none;
+}
+.product-card__toggle-inside-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: none;
+  background-color: rgb(219 219 219);
+  color: rgb(51 51 51 / var(--tw-text-opacity, 1));
+  border: none;
+  border-bottom-left-radius: .25rem;
+  padding: 0.25rem 0.5rem;
+  font: inherit;
+  cursor: pointer;
+  outline: none;
+}
+.product-card:hover .product-card__toggle-inside-button,
+.product-card:active .product-card__toggle-inside-button {
+  display: block;
 }
 .product-card__label {
   position: absolute;
