--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,10 @@ html {
   box-sizing: inherit;
 }
 
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
 body {
   margin: 0;
   background-color: rgb(239, 239, 239);
